...
          lastError: '同步配置保存失败',
          status: 'error',
        },
      })

      return {
        alertMessage: '同步配置没有保存成功。',
        alertTitle: '保存失败',
        ok: false,
      }
    } finally {
      this.setState({ isSavingSyncConfiguration: false })
    }
...
